--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,6 @@
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-rt-transports-http-jetty</artifactId>
-			<version>${cxf.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.cxf</groupId>
 			<artifactId>cxf-rt-frontend-jaxws</artifactId>
 			<version>${cxf.version}</version>
 		</dependency>
@@ -66,12 +61,9 @@
 							<wsdlOptions>
 								<wsdlOption>
 									<wsdl>${basedir}/src/main/resources/wsdl/vim25/vimService.wsdl</wsdl>
-									<extraargs>
-										<extraarg>-p</extraarg>
-										<extraarg>com.vmware.vim25</extraarg>
-										<extraarg>-faultSerialVersionUID</extraarg>
-										<extraarg>FQCN</extraarg>
-									</extraargs>
+									<packagenames>com.vmware.vim25</packagenames>
+									<wsdlLocation>classpath:wsdl/vim25/vimService.wsdl</wsdlLocation>
+									<faultSerialVersionUID>FQCN</faultSerialVersionUID>
 								</wsdlOption>
 							</wsdlOptions>
 						</configuration>
